<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>
    <string name="detail" translatable="false">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" />
    <string name="widget_title">Stock Hawk Today\'s Market</string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>

    <string name="days_low">LOW: &lt;b>%1$s&lt;/b></string>
    <string name="days_high">HIGH: &lt;b>%1$s&lt;/b></string>
    <string name="year_low">Y-LOW: &lt;b>%1$s&lt;/b></string>
    <string name="year_high">Y-HIGH: &lt;b>%1$s&lt;/b></string>
    <string name="open">OPEN: &lt;b>%1$s&lt;/b></string>
    <string name="last">LAST: &lt;b>%1$s&lt;/b></string>
    <string name="volume">VOL: &lt;b>%1$s&lt;/b></string>
    <string name="percent_change">CH: &lt;b>%1$s&lt;/b></string>
    <string name="one_day">1D</string>
    <string name="five_days">5D</string>
    <string name="three_months">3M</string>
    <string name="six_months">6M</string>
    <string name="year">1Y</string>
    <string name="empty_quote_list">No quote information Available</string>
    <string name="last_twelve_months">Stock over last 12 months</string>
    <string name="last_six_months">Stock over last 6 months</string>
    <string name="last_three_months">Stock over last 3 months</string>
    <string name="last_five_days">Stock over last five days</string>
    <string name="today_stock">Today\'s stock value</string>
    <string name="title_activity_quote_widget_configurator">Configure widget</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_symbol_label">Symbol</string>
    <string name="pref_symbol_key">symbol</string>
    <string name="pref_symbol_default">GOOG</string>
    <string name="pref_symbol_summary">Select a quote symbol</string>
    <string name="add_new_quote">Add new Quote</string>

</resources>
