<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/one_day"
        android:id="@+id/one_day"
        android:layout_alignBottom="@+id/five_days"
        style="?android:attr/borderlessButtonStyle"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/five_days"
        android:id="@+id/five_days"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/one_day"
        android:layout_alignBottom="@+id/three_months"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/three_months"
        android:id="@+id/three_months"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/five_days"
        android:layout_toEndOf="@+id/five_days"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignWithParentIfMissing="false"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/six_months"
        android:id="@+id/six_months"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/three_months"
        android:layout_toEndOf="@+id/three_months"
        style="?android:attr/borderlessButtonStyle"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:id="@+id/year"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/six_months"
        android:layout_toEndOf="@+id/six_months"
        style="?android:attr/borderlessButtonStyle"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year">
        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="210sp"/>
    </FrameLayout>



</RelativeLayout>